# arnold_plugins

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: AddPlugin.cmake  FindArnold.cmake
examples/: expr_implicit.ass  sky.ass
procedurals/: CMakeLists.txt
procedurals/so_expr_implicit/: CMakeLists.txt  README.md  expr_implicit.cpp
